@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/eog-plugins
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/eog-plugins/ChangeLog,v 1.10 2013/12/25 13:56:38 pacho Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/eog-plugins/ChangeLog,v 1.11 2014/02/22 15:26:03 pacho Exp $
+
+  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> eog-plugins-3.10.1.ebuild:
+  arch stable, bug 888
 
   25 Dec 2013; Pacho Ramos <pacho@gentoo.org> eog-plugins-3.10.1.ebuild,
   eog-plugins-3.8.1.ebuild:
